Fix alert status messages

--- a/automations/alerts.yaml
+++ b/automations/alerts.yaml
@@ -35,8 +35,7 @@
     - condition: template
       value_template: "{{ states(trigger.entity_id) != 'unavailable' }}"
     - condition: template
-      value_template: "{{ trigger.entity_id is not none and trigger.to_state.state is not none and trigger.from_state.state is not none and states(trigger.entity_id) != none}}"
-
+      value_template: "{{ trigger.platform == 'state' and trigger.to_state.state  and trigger.from_state.state is not none and states(trigger.entity_id) != none}}"
 
   action:
     service: notify.groot_automation
