--- a/popup/sidebar_active_alerts.yaml
+++ b/popup/sidebar_active_alerts.yaml
@@ -9,129 +9,130 @@ browser_mod:
         height: 100%;
         padding: 1.1em 1.9em 1.9em 1.9em;
       }
+
+      /* portrait */
+      @media screen and (max-width: 1200px) {
+        :host .content {
+          width: 30em;
+          padding: 1.1em 1.9em 1.9em 1.9em;
+        }
+      }
+      /* phone */
+      @media screen and (max-width: 800px) {
+        :host .content {
+          width: 20em;
+          padding: 1.1em 1.9em 1.9em 1.9em;
+        }
+      }
+    hui-grid-card:
+      $: |
+        #root {
+          grid-gap: 0 !important;
+        }
   card:
-    type: custom:mod-card
-    style:
-      hui-grid-card:
-        $: |
-          button-card {
-            margin: 0.8em 0 2.5em 1em;
-          }
-          #root {
-            grid-gap: 0 !important;
-          }
-        $hui-markdown-card:
-          $ha-markdown$: |
-            ha-markdown-element {
-              cursor: default;
-            }
-            ha-markdown-element > p > span {
-              font-family: SF Text;
-              font-size: 1.5em;
-              font-weight: 500;
-              vertical-align: 30%;
-            }
-            ha-markdown-element > p > span > ha-icon {
-              vertical-align: 10%;
-              opacity: 0.5;
-            }
-            ha-markdown-element > p > strong {
-              font-family: SF Text;
-              font-size: 1.2em;
-              font-weight: 500;
-              line-height: 1.9em;
-              opacity: 0.5;
-            }
-            ha-markdown-element > ul {
-              font-family: SF Display;
-              font-size: 1.1em;
-              padding-left: 2.5em;
-            }
-            ha-markdown-element > ul > li {
-              margin-bottom: 0.4em;
-            }
-            ha-markdown-element > ul > li:last-child {
-              margin-bottom: 0px;
-            }
-            ha-markdown-element > ul > li > code {
-              background-color: var(--secondary-background-color);
-            }
+    type: grid
+    columns: 1
+    square: false
+    cards:
 
-    card:
-      type: grid
-      columns: 1
-      square: false
-      cards:
-        - type: conditional
-          conditions:
-            - entity: sensor.template_oakland_alert_1
-              state: 'on'
-          card:
-            type: markdown
-            content: >
-              {% set alert_event = state_attr('sensor.template_oakland_alert_1', 'alert_event') %}
+      ### Weather Alert 1
+      - type: custom:button-card
+        entity: sensor.template_oakland_alert_1
+        state_display: |
+          [[[
+            if (entity && entity.state === 'on') {
+              let alert_event = entity.attributes.alert_event;
 
-              {% if alert_event is search('special', ignorecase=True) %}
-                {% set display_title = state_attr('sensor.template_oakland_alert_1', 'display_message') %}
-                {% set font_color = '#b133e8' %}
-              {% else %}
-                {% set display_title = state_attr('sensor.template_oakland_alert_1', 'display_title') %}
-                {% set font_color = '#f7e304' %}
-              {% endif %}
+              let display_title = ((alert_event.toLowerCase().includes('special')) || (alert_event.toLowerCase().includes('warning'))) ?
+                entity.attributes.display_message :
+                entity.attributes.display_title;
 
-              <span><font color={{ font_color }}><ha-icon icon="mdi:weather-lightning"></ha-icon></font> {{ alert_event }} <font color={{ font_color }}><ha-icon icon="mdi:weather-lightning"></ha-icon></font></span>
-              <p>{{ display_title }}</p>
+              let font_color = ``;
+              if (alert_event.toLowerCase().includes('watch')) {
+                font_color = `#f7e304`;
+              } else if (alert_event.toLowerCase().includes('warning')) {
+                font_color = `#ef0e0e`;
+              } else {
+                font_color = `#b133e8`;
+              }
 
-              {% if is_state('sensor.template_oakland_alert_2', 'on') %}
-                {% set alert_event = state_attr('sensor.template_oakland_alert_1', 'alert_event') %}
+              return `
+                <font color=${font_color}><ha-icon icon="mdi:weather-lightning"></ha-icon></font> <span class="title"> ${alert_event}</span><br>
+                <p class="subtitle">${display_title}</p>
+              `;
+            } else {
+              return `
+                <font color=#9da0a2><ha-icon icon="mdi:check"></ha-icon></font> <span class="title">Weather Events #1</span><br>
+                <p class="subtitle">No Active Weather Events</p>
+              `;
+            }
+          ]]]
+        template:
+          - updater
 
-                {% if alert_event is search('special', ignorecase=True) %}
-                  {% set display_title = state_attr('sensor.template_oakland_alert_2', 'display_message') %}
-                  {% set font_color = '#b133e8' %}
-                {% else %}
-                  {% set display_title = state_attr('sensor.template_oakland_alert_2', 'display_title') %}
-                  {% set font_color = '#f7e304' %}
-                {% endif %}
+        ### Weather Alert 2
+      - type: custom:button-card
+        entity: sensor.template_oakland_alert_2
+        state_display: |
+          [[[
+            if (entity && entity.state === 'on') {
+              let alert_event = entity.attributes.alert_event;
 
-                <span><font color={{ font_color }}><ha-icon icon="mdi:weather-lightning"></ha-icon></font> {{ alert_event }} <font color={{ font_color }}><ha-icon icon="mdi:weather-lightning"></ha-icon></font></span>
-                <p>{{ display_title }}</p>
-              {% endif %}
+              let display_title = ((alert_event.toLowerCase().includes('special')) || (alert_event.toLowerCase().includes('warning'))) ?
+                entity.attributes.display_message :
+                entity.attributes.display_title;
 
-        - type: conditional
-          conditions:
-            - entity: sensor.template_unavailable_entities
-              state_not: '0'
-          card:
-            type: markdown
-            content: >
-              {% set miss = state_attr('sensor.template_unavailable_entities', 'entities') %}
-              {% if states('sensor.template_unavailable_entities') | int > 0 %}
-                <span><ha-icon icon="mdi:home-alert"></ha-icon> Missing Sensors - \#{{ states('sensor.template_unavailable_entities') }} <ha-icon icon="mdi:home-alert"></ha-icon></span>
-                <ul>
-                  {%- for s in miss -%}
-                    <li><ha-icon icon="{{ state_attr(s, 'icon') }}"></ha-icon> {{ s }}</li>
-                  {%- endfor -%}
-                </ul>
-              {% endif %}
+              let font_color = ``;
+              if (alert_event.toLowerCase().includes('watch')) {
+                font_color = `#f7e304`;
+              } else if (alert_event.toLowerCase().includes('warning')) {
+                font_color = `#ef0e0e`;
+              } else {
+                font_color = `#b133e8`;
+              }
 
-        - type: conditional
-          conditions:
-            - entity: sensor.template_unavailable_entities
-              state_not: '0'
-          card:
-            type: custom:mini-graph-card
-            entities:
-              - color: '#399b56'
-                entity: sensor.template_unavailable_entities
-            line_width: 3
-            hour24: true
-            group: true
-            align_icon: left
-            align_state: right
-            align_header: left
-            hours_to_show: 24
-            show:
-              {fill: fade, icon: false, name: false, state: false, 
-              name_adaptive_color: false, labels: hover, legend: false}
-            tap_action:
-              action: none
+              return `
+                <font color=${font_color}><ha-icon icon="mdi:weather-lightning"></ha-icon></font> <span class="title"> ${alert_event}</span><br>
+                <p class="subtitle">${display_title}</p>
+              `;
+            } else {
+              return `
+                <font color=#9da0a2><ha-icon icon="mdi:check"></ha-icon></font> <span class="title">Weather Events #2</span><br>
+                <p class="subtitle">No Active Weather Events</p>
+              `;
+            }
+          ]]]
+        template:
+          - updater
+
+      ### Missing Entities
+      - type: custom:button-card
+        entity: sensor.template_unavailable_entities
+        state_display: |
+          [[[
+            if (entity && entity.state !== '0' && entity.state !== 'unknown') {
+              let output = ``;
+              var missing = entity.attributes.entities;
+              let count = missing.length;
+
+              for (var i = 0; i < missing.length; i++) {
+                let entity_icon = states[missing[i]].attributes.icon;
+                output += `<li><ha-icon icon="${entity_icon}"></ha-icon>\u279e ${missing[i]}</li>`;
+              }
+
+              let subtitle = `Total Entities \u279e ${count}`;
+
+              return `
+                <font color=#3182b7><ha-icon icon="mdi:home-alert"></ha-icon></font> <span class="title">Missing Entities</span><br>
+                <p class="subtitle">${subtitle}</p>
+                <ul>${output}</ul>
+              `;
+            } else {
+              return `
+                <font color=#9da0a2><ha-icon icon="mdi:check"></ha-icon></font> <span class="title">Missing Entities</span><br>
+                <p class="subtitle">No Missing Entities</p>
+              `;
+            }
+          ]]]
+        template:
+          - updater
