--- a/templates/sidebar.yaml
+++ b/templates/sidebar.yaml
@@ -50,13 +50,13 @@
           </b></font>
 
         weather: |
-          {%- set temperature = states('sensor.dark_sky_temperature') %}
+          {%- set temperature = states('sensor.dark_sky_temperature') | float %}
           {%- set apparent = states('sensor.dark_sky_apparent_temperature') | round %}
           {%- set precip = states('sensor.dark_sky_precip_probability') | round %}
           {% if not is_state('sensor.dark_sky_temperature', 'unknown') %}
-            {%- if temperature | float <= 0.0 -%}
+            {%- if temperature <= 0.0 -%}
               Feels like {{ apparent }}° with {{ precip }}% risk of snow {{'\u2744\uFE0F'}}
-            {%- elif temperature | float > 0.0 -%} 
+            {%- elif temperature > 0.0 -%} 
               Feels like {{ apparent}}° with {{ precip }}% risk of rain {{ '\u2614\uFE0F' if precip > 30 }}
             {%- endif %}
           {%- else %}
@@ -66,3 +66,33 @@
     - unique_id: hacs_version
       state: >
         {{ device_attr(device_id('sensor.hacs'), 'sw_version') }}
+
+    - unique_id: warning_icon_color
+      state: >
+        {% if is_state('sensor.template_oakland_alert_1', 'on') or ((states('sensor.template_unavailable_entities') | int > 0) and not is_state('timer.startup_missing_delay', 'active')) %}
+          True
+        {% else %}
+          False
+        {% endif %}
+      attributes:
+        color: |
+          {% if is_state('sensor.template_oakland_alert_1', 'on') %}
+            {% set alert_event1 = state_attr('sensor.template_oakland_alert_1', 'alert_event') %}
+            {% set alert_event2 = state_attr('sensor.template_oakland_alert_2', 'alert_event') %}
+
+            {% if ((alert_event1 is search('warning', ignorecase=True)) or (alert_event2 is search('warning', ignorecase=True))) %}
+              rgb(205, 1, 1) !important;
+            {% elif ((alert_event1 is search('special', ignorecase=True)) or (alert_event2 is search('special', ignorecase=True))) %}
+              rgb(10, 229, 6) !important;
+            {% elif ((alert_event1 is search('watch', ignorecase=True)) or (alert_event2 is search('watch', ignorecase=True))) %}
+              rgb(237, 255, 4) !important;
+            {% else %}
+              rgb(157, 160, 162) !important;
+            {% endif %}
+          {% else %}
+            {% if (states('sensor.template_unavailable_entities') | int > 0) and not is_state('timer.startup_missing_delay', 'active') %}
+              rgb(49, 130, 183) !important;
+            {% else %}
+              rgb(157, 160, 162) !important;
+            {% endif %}
+          {% endif %}
