Add do not disturb to ignore list

--- a/include/group.yaml
+++ b/include/group.yaml
@@ -54,6 +54,11 @@ group:
       - switch.spot_shuffle_switch
       - switch.weston_echo_repeat_switch
       - switch.weston_echo_shuffle_switch
+      - switch.ecobee_do_not_disturb_switch
+      - switch.everywhere_do_not_disturb_switch
+      - switch.oli_echo_do_not_disturb_switch
+      - switch.spot_do_not_disturb_switch
+      - switch.weston_echo_do_not_disturb_switch
       - switch.dryer_power_off
       - switch.washer_power_off
       - sensor.template_washer_door_lock
