Fix breaking changes for 2020.10.0

--- a/popup/home_weston.yaml
+++ b/popup/home_weston.yaml
@@ -63,15 +63,8 @@ browser_mod:
         show_state: false
         entities:
 
-          - entity: device_tracker.weston_phone_on_router
+          - entity: device_tracker.pixel_4a_5g
             name: Router
-            style: |
-              state-badge {
-                color: {{ '#3182b7' if is_state(config.entity, 'home') else '#3c3f3f' }};
-              }
-
-          - entity: device_tracker.weston_phone_on_satellite
-            name: Satellite
             style: |
               state-badge {
                 color: {{ '#3182b7' if is_state(config.entity, 'home') else '#3c3f3f' }};
