Change to webrtc integration for cameras

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -46,6 +46,7 @@ lovelace:
       { url: /hacsfiles/lovelace-canary/canary.js,                                  type: module },
       { url: /hacsfiles/simple-thermostat/simple-thermostat.js,                     type: module },
       { url: /hacsfiles/lovelace-more-info-card/more-info-card.js,                  type: module },
+      { url: /hacsfiles/webrtc/www/webrtc-camera.js,                                type: module },
 
       { url: '/local/custom_icons.js?v=28082021',                                   type: module },
       { url: '/local/font.css',                                                     type: css    },
