--- a/include/input_boolean.yaml
+++ b/include/input_boolean.yaml
@@ -35,3 +35,8 @@ input_boolean:
   # Fresh Air Mode
   #-------------------------------------------
   fresh_air_mode_en:
+
+  #-------------------------------------------
+  # Enables / Disables Master Bedroom Fan
+  #-------------------------------------------
+  master_bedroom_fan_en:
