--- a/include/input_boolean.yaml
+++ b/include/input_boolean.yaml
@@ -40,3 +40,8 @@ input_boolean:
   # Enables / Disables Master Bedroom Fan
   #-------------------------------------------
   master_bedroom_fan_en:
+
+  #-------------------------------------------
+  # Enables / Disables Master Bedroom Echo
+  #-------------------------------------------
+  master_bedroom_echo_en:
