--- a/automations/oli_bedroom.yaml
+++ b/automations/oli_bedroom.yaml
@@ -104,4 +104,4 @@
                       state: 'on'
                   sequence:
                     - service: light.turn_on
-                      entity_id: switch.oli_night_light
+                      entity_id: light.oli_night_light
