Added unifi sensors

--- a/templates/updates.yaml
+++ b/templates/updates.yaml
@@ -16,3 +16,10 @@
               <b><a href="#" onclick="window.open('{{ url }}');">plex</a></b> {{ installed + ' \u279e ' + latest }}
             {% endif %}
           {% endif %}
+
+        unifi: >
+          {% set installed = states('sensor.template_udm_version') %}
+          {% set url = 'https://community.ui.com/releases?q=dream+machine+se' %}
+          {% if is_state('binary_sensor.template_udm_upgradable', 'on') %}
+            <b><a href="#" onclick="window.open('{{ url }}');">UniFi Dream Machine SE ({{ installed }})</a></b> Update Available
+          {% endif %}
